--- a/src/index.css
+++ b/src/index.css
@@ -78,3 +78,22 @@ button {
   opacity: 1;
   transform: scale(1);
 }
+
+.btn {
+  padding: 10px 18px;
+  text-transform: capitalize;
+  border-radius: 2px;
+  cursor: pointer;
+  background: var(--main_color);
+  color: var(--white_color);
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  transition: 0.3s;
+  width: max-content;
+  border-radius: 30px;
+}
+
+.btn:hover {
+  scale: 1.1;
+}
