--- a/src/components/common/slideProducts/slideProducts.css
+++ b/src/components/common/slideProducts/slideProducts.css
@@ -1,11 +1,3 @@
-:root {
-  --main_color: #0090f0;
-  --p_color: #7b7b7b;
-  --bg_color: #f3f3f3;
-  --white_color: #fff;
-  --color_heading: #253237;
-  --border_color: #d6d6d6d5;
-}
 .slide_products {
   padding: 50px 0;
 }
@@ -31,4 +23,18 @@
   color: var(--main_color);
   margin-bottom: 10px;
   font-weight: 600;
+}
+
+.swiper_product {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  z-index: 1;
+}
+
+@media screen and (max-width: 768px) {
+  .swiper_product {
+    padding: 0 12%;
+  }
 }
