--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,10 @@ body {
   font-family: "Inter", sans-serif;
 }
 
+main {
+  margin-top: 160px;
+}
+
 a {
   text-decoration: none;
   color: var(--color_heading);
