--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,3 +1,13 @@
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: var(--white_color);
+  width: 100%;
+  z-index: 999;
+}
+
+
 /* Top Header */
 .top_header .container {
   display: flex;
