--- a/src/components/productDetails/productDetails.css
+++ b/src/components/productDetails/productDetails.css
@@ -18,7 +18,8 @@
 }
 
 .item_details .img_item .big_img {
-  width: 100%;
+  width: 75%;
+  margin: 0 auto;
 }
 
 .item_details .img_item .big_img img {
@@ -34,7 +35,8 @@
 }
 
 .item_details .img_item .small_img img {
-  width: calc(25% - 7.5px);
+  width: calc(20% - 7.5px);
+  margin: 0 auto;
   cursor: pointer;
   border-radius: 4px;
   border: 1px solid var(--border_color);
