--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,11 @@ button {
   border: none;
   outline: none;
 }
+
+button:disabled {
+  cursor: not-allowed;
+}
+
 /* Global Class CSS */
 .container {
   width: 90%;
@@ -100,4 +105,38 @@ button {
 
 .btn:hover {
   scale: 1.1;
+}
+
+/* Toast */
+.toast-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  min-width: 300px;
+  max-width: 300px;
+}
+
+.toast-img {
+  width: auto;
+  height: 50px;
+  object-fit: cover;
+}
+
+.toast-content {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  font-size: 14px;
+}
+.toast-wrapper strong {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
+
+.toast-content .btn {
+  margin-top: 5px;
+  font-size: 13px;
 }
