--- a/src/index.css
+++ b/src/index.css
@@ -101,7 +101,7 @@ header {
   gap: 10px;
   align-items: center;
   transition: 0.3s;
-  width: max-content;
+  width: fit-content;
   border-radius: 30px;
 }
 
