--- a/src/components/header/bottomHeader/bottomHeader.css
+++ b/src/components/header/bottomHeader/bottomHeader.css
@@ -138,7 +138,6 @@
 }
 
 .bottom_header .mobile_nav_links li {
-  padding: 10px 15px;
   border-bottom: 1px solid var(--border_color);
 }
 
@@ -149,6 +148,9 @@
 .bottom_header .mobile_nav_links li a {
   color: var(--text_color);
   font-size: 14px;
+  display: inline-block;
+  width: 100%;
+  padding: 10px 15px;
 }
 
 /* ===== sign/register icons ===== */
