--- a/src/components/common/slideProducts/slideProducts.css
+++ b/src/components/common/slideProducts/slideProducts.css
@@ -25,16 +25,24 @@
   font-weight: 600;
 }
 
-.swiper_product {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: relative;
-  z-index: 1;
+.swiper {
+  width: 100%;
+  height: 100%;
 }
 
-@media screen and (max-width: 768px) {
-  .swiper_product {
-    padding: 0 12%;
-  }
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
