--- a/src/components/home/heroSlider/heroSlider.css
+++ b/src/components/home/heroSlider/heroSlider.css
@@ -17,12 +17,12 @@
   font-size: 1vw;
   font-style: italic;
   font-weight: normal;
-  margin-bottom: 0vw;
+  margin-bottom: 5px;
 }
 
 .swiper-slide .slider_content h2 {
   text-transform: capitalize;
-  font-size: 2.5vw;
+  font-size: min(1.5vw, 2.5vw);
   margin-bottom: 30px;
   color: var(--main_color);
   font-weight: bolder;
@@ -36,5 +36,43 @@
 }
 
 .swiper-slide .slider_content .btn {
-  font-size: 1.2vw;
+  font-size: 0.8vw;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.swiper-pagination-bullet {
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  line-height: 20px;
+  font-size: 12px;
+  color: #000;
+  opacity: 1;
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.swiper-pagination-bullet-active {
+  color: #fff;
+  background: #007aff;
 }
