[update] arrow swiper

--- a/src/components/header/topHeader/topHeader.css
+++ b/src/components/header/topHeader/topHeader.css
@@ -221,7 +221,10 @@
   }
 
   .search_results {
-    max-height: 60vh;
     top: calc(100% + 40px);
+  }
+
+  .search_result {
+    padding: 10px 0;
   }
 }
