--- a/src/components/common/slideProducts/slideProducts.css
+++ b/src/components/common/slideProducts/slideProducts.css
@@ -28,6 +28,8 @@
 .swiper {
   width: 100%;
   height: 100%;
+
+  position: relative;
 }
 
 .swiper-slide {
@@ -45,4 +47,37 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 100;
+
+  background-color: var(--main_color);
+  color: var(--white_color);
+
+  width: 40px;
+  height: 40px;
+  border-radius: 10px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.swiper:hover .swiper-button-next,
+.swiper:hover .swiper-button-prev {
+  opacity: 1;
+}
+
+.swiper-button-next::after,
+.swiper-button-prev::after {
+  font-size: 16px;
+  font-weight: bold;
 }
